// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: add language 1`] = `
<div
  className="page page-limited"
  id="project-quality-profiles"
>
  <Suggestions
    suggestions="project_quality_profiles"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="project_quality_profiles.page"
  />
  <A11ySkipTarget
    anchor="profiles_main"
  />
  <header
    className="page-header"
  >
    <div
      className="page-title display-flex-center"
    >
      <h1>
        project_quality_profiles.page
         
      </h1>
      <HelpTooltip
        className="spacer-left"
        overlay={
          <div
            className="big-padded-top big-padded-bottom"
          >
            quality_profiles.list.projects.help
          </div>
        }
      />
    </div>
  </header>
  <div
    className="boxed-group"
  >
    <h2
      className="boxed-group-header"
    >
      project_quality_profile.subtitle
    </h2>
    <div
      className="boxed-group-inner"
    >
      <p
        className="big-spacer-bottom"
      >
        project_quality_profiles.page.description
      </p>
      <table
        className="data zebra"
      >
        <thead>
          <tr>
            <th>
              language
            </th>
            <th
              className="thin nowrap"
            >
              project_quality_profile.current
            </th>
            <th
              className="thin nowrap text-right"
            >
              coding_rules.filters.activation.active_rules
            </th>
            <th
              aria-label="actions"
            />
          </tr>
        </thead>
        <tbody>
          <tr
            key="css"
          >
            <td>
              CSS
            </td>
            <td
              className="thin nowrap"
            >
              <span
                className="display-inline-flex-center"
              >
                <em>
                  project_quality_profile.instance_default
                </em>
              </span>
            </td>
            <td
              className="nowrap text-right"
            >
              <ForwardRef(Link)
                to={
                  {
                    "pathname": "/coding_rules",
                    "search": "?activation=true&qprofile=bar",
                  }
                }
              >
                10
              </ForwardRef(Link)>
            </td>
            <td
              className="text-right"
            >
              <Button
                onClick={[Function]}
              >
                <EditIcon
                  className="spacer-right"
                />
                project_quality_profile.change_profile
              </Button>
            </td>
          </tr>
          <tr
            key="html"
          >
            <td>
              HTML
            </td>
            <td
              className="thin nowrap"
            >
              <span
                className="display-inline-flex-center"
              >
                Baz
              </span>
            </td>
            <td
              className="nowrap text-right"
            >
              <ForwardRef(Link)
                to={
                  {
                    "pathname": "/coding_rules",
                    "search": "?activation=true&qprofile=baz",
                  }
                }
              >
                10
              </ForwardRef(Link)>
            </td>
            <td
              className="text-right"
            >
              <Button
                onClick={[Function]}
              >
                <EditIcon
                  className="spacer-right"
                />
                project_quality_profile.change_profile
              </Button>
            </td>
          </tr>
          <tr
            key="js"
          >
            <td>
              JS
            </td>
            <td
              className="thin nowrap"
            >
              <span
                className="display-inline-flex-center"
              >
                <em>
                  project_quality_profile.instance_default
                </em>
              </span>
            </td>
            <td
              className="nowrap text-right"
            >
              <ForwardRef(Link)
                to={
                  {
                    "pathname": "/coding_rules",
                    "search": "?activation=true&qprofile=foo",
                  }
                }
              >
                10
              </ForwardRef(Link)>
            </td>
            <td
              className="text-right"
            >
              <Button
                onClick={[Function]}
              >
                <EditIcon
                  className="spacer-right"
                />
                project_quality_profile.change_profile
              </Button>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="big-spacer-top"
      >
        <h2>
          project_quality_profile.add_language.title
        </h2>
        <p
          className="spacer-top big-spacer-bottom"
        >
          project_quality_profile.add_language.description
        </p>
        <Button
          disabled={false}
          onClick={[MockFunction]}
        >
          <PlusCircleIcon
            className="little-spacer-right"
          />
          project_quality_profile.add_language.action
        </Button>
      </div>
      <withLanguagesContext(AddLanguageModal)
        onClose={[MockFunction]}
        onSubmit={[MockFunction]}
        profilesByLanguage={
          {
            "css": [
              {
                "activeDeprecatedRuleCount": 2,
                "activeRuleCount": 10,
                "childrenCount": 0,
                "depth": 1,
                "isBuiltIn": false,
                "isDefault": false,
                "isInherited": false,
                "key": "bar",
                "language": "css",
                "languageName": "JavaScript",
                "name": "name",
                "projectCount": 3,
              },
            ],
            "html": [
              {
                "activeDeprecatedRuleCount": 2,
                "activeRuleCount": 10,
                "childrenCount": 0,
                "depth": 1,
                "isBuiltIn": false,
                "isDefault": false,
                "isInherited": false,
                "key": "baz",
                "language": "html",
                "languageName": "JavaScript",
                "name": "name",
                "projectCount": 3,
              },
            ],
            "js": [
              {
                "activeDeprecatedRuleCount": 2,
                "activeRuleCount": 10,
                "childrenCount": 0,
                "depth": 1,
                "isBuiltIn": false,
                "isDefault": false,
                "isInherited": false,
                "key": "foo",
                "language": "js",
                "languageName": "JavaScript",
                "name": "name",
                "projectCount": 3,
              },
            ],
          }
        }
        unavailableLanguages={
          [
            "js",
            "css",
            "html",
          ]
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: default 1`] = `
<div
  className="page page-limited"
  id="project-quality-profiles"
>
  <Suggestions
    suggestions="project_quality_profiles"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="project_quality_profiles.page"
  />
  <A11ySkipTarget
    anchor="profiles_main"
  />
  <header
    className="page-header"
  >
    <div
      className="page-title display-flex-center"
    >
      <h1>
        project_quality_profiles.page
         
      </h1>
      <HelpTooltip
        className="spacer-left"
        overlay={
          <div
            className="big-padded-top big-padded-bottom"
          >
            quality_profiles.list.projects.help
          </div>
        }
      />
    </div>
  </header>
  <div
    className="boxed-group"
  >
    <h2
      className="boxed-group-header"
    >
      project_quality_profile.subtitle
    </h2>
    <div
      className="boxed-group-inner"
    >
      <p
        className="big-spacer-bottom"
      >
        project_quality_profiles.page.description
      </p>
      <table
        className="data zebra"
      >
        <thead>
          <tr>
            <th>
              language
            </th>
            <th
              className="thin nowrap"
            >
              project_quality_profile.current
            </th>
            <th
              className="thin nowrap text-right"
            >
              coding_rules.filters.activation.active_rules
            </th>
            <th
              aria-label="actions"
            />
          </tr>
        </thead>
        <tbody>
          <tr
            key="css"
          >
            <td>
              CSS
            </td>
            <td
              className="thin nowrap"
            >
              <span
                className="display-inline-flex-center"
              >
                <em>
                  project_quality_profile.instance_default
                </em>
              </span>
            </td>
            <td
              className="nowrap text-right"
            >
              <ForwardRef(Link)
                to={
                  {
                    "pathname": "/coding_rules",
                    "search": "?activation=true&qprofile=bar",
                  }
                }
              >
                10
              </ForwardRef(Link)>
            </td>
            <td
              className="text-right"
            >
              <Button
                onClick={[Function]}
              >
                <EditIcon
                  className="spacer-right"
                />
                project_quality_profile.change_profile
              </Button>
            </td>
          </tr>
          <tr
            key="html"
          >
            <td>
              HTML
            </td>
            <td
              className="thin nowrap"
            >
              <span
                className="display-inline-flex-center"
              >
                Baz
              </span>
            </td>
            <td
              className="nowrap text-right"
            >
              <ForwardRef(Link)
                to={
                  {
                    "pathname": "/coding_rules",
                    "search": "?activation=true&qprofile=baz",
                  }
                }
              >
                10
              </ForwardRef(Link)>
            </td>
            <td
              className="text-right"
            >
              <Button
                onClick={[Function]}
              >
                <EditIcon
                  className="spacer-right"
                />
                project_quality_profile.change_profile
              </Button>
            </td>
          </tr>
          <tr
            key="js"
          >
            <td>
              JS
            </td>
            <td
              className="thin nowrap"
            >
              <span
                className="display-inline-flex-center"
              >
                <em>
                  project_quality_profile.instance_default
                </em>
              </span>
            </td>
            <td
              className="nowrap text-right"
            >
              <ForwardRef(Link)
                to={
                  {
                    "pathname": "/coding_rules",
                    "search": "?activation=true&qprofile=foo",
                  }
                }
              >
                10
              </ForwardRef(Link)>
            </td>
            <td
              className="text-right"
            >
              <Button
                onClick={[Function]}
              >
                <EditIcon
                  className="spacer-right"
                />
                project_quality_profile.change_profile
              </Button>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="big-spacer-top"
      >
        <h2>
          project_quality_profile.add_language.title
        </h2>
        <p
          className="spacer-top big-spacer-bottom"
        >
          project_quality_profile.add_language.description
        </p>
        <Button
          disabled={false}
          onClick={[MockFunction]}
        >
          <PlusCircleIcon
            className="little-spacer-right"
          />
          project_quality_profile.add_language.action
        </Button>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="page page-limited"
  id="project-quality-profiles"
>
  <Suggestions
    suggestions="project_quality_profiles"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="project_quality_profiles.page"
  />
  <A11ySkipTarget
    anchor="profiles_main"
  />
  <header
    className="page-header"
  >
    <div
      className="page-title display-flex-center"
    >
      <h1>
        project_quality_profiles.page
         
      </h1>
      <HelpTooltip
        className="spacer-left"
        overlay={
          <div
            className="big-padded-top big-padded-bottom"
          >
            quality_profiles.list.projects.help
          </div>
        }
      />
    </div>
  </header>
  <div
    className="boxed-group"
  >
    <h2
      className="boxed-group-header"
    >
      project_quality_profile.subtitle
    </h2>
    <div
      className="boxed-group-inner"
    >
      <p
        className="big-spacer-bottom"
      >
        project_quality_profiles.page.description
      </p>
      <i
        className="spinner spacer-left"
      />
      <div
        className="big-spacer-top"
      >
        <h2>
          project_quality_profile.add_language.title
        </h2>
        <p
          className="spacer-top big-spacer-bottom"
        >
          project_quality_profile.add_language.description
        </p>
        <Button
          disabled={true}
          onClick={[MockFunction]}
        >
          <PlusCircleIcon
            className="little-spacer-right"
          />
          project_quality_profile.add_language.action
        </Button>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: open profile 1`] = `
<div
  className="page page-limited"
  id="project-quality-profiles"
>
  <Suggestions
    suggestions="project_quality_profiles"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="project_quality_profiles.page"
  />
  <A11ySkipTarget
    anchor="profiles_main"
  />
  <header
    className="page-header"
  >
    <div
      className="page-title display-flex-center"
    >
      <h1>
        project_quality_profiles.page
         
      </h1>
      <HelpTooltip
        className="spacer-left"
        overlay={
          <div
            className="big-padded-top big-padded-bottom"
          >
            quality_profiles.list.projects.help
          </div>
        }
      />
    </div>
  </header>
  <div
    className="boxed-group"
  >
    <h2
      className="boxed-group-header"
    >
      project_quality_profile.subtitle
    </h2>
    <div
      className="boxed-group-inner"
    >
      <p
        className="big-spacer-bottom"
      >
        project_quality_profiles.page.description
      </p>
      <table
        className="data zebra"
      >
        <thead>
          <tr>
            <th>
              language
            </th>
            <th
              className="thin nowrap"
            >
              project_quality_profile.current
            </th>
            <th
              className="thin nowrap text-right"
            >
              coding_rules.filters.activation.active_rules
            </th>
            <th
              aria-label="actions"
            />
          </tr>
        </thead>
        <tbody>
          <tr
            key="css"
          >
            <td>
              CSS
            </td>
            <td
              className="thin nowrap"
            >
              <span
                className="display-inline-flex-center"
              >
                <em>
                  project_quality_profile.instance_default
                </em>
              </span>
            </td>
            <td
              className="nowrap text-right"
            >
              <ForwardRef(Link)
                to={
                  {
                    "pathname": "/coding_rules",
                    "search": "?activation=true&qprofile=bar",
                  }
                }
              >
                10
              </ForwardRef(Link)>
            </td>
            <td
              className="text-right"
            >
              <Button
                onClick={[Function]}
              >
                <EditIcon
                  className="spacer-right"
                />
                project_quality_profile.change_profile
              </Button>
            </td>
          </tr>
          <tr
            key="html"
          >
            <td>
              HTML
            </td>
            <td
              className="thin nowrap"
            >
              <span
                className="display-inline-flex-center"
              >
                Baz
              </span>
            </td>
            <td
              className="nowrap text-right"
            >
              <ForwardRef(Link)
                to={
                  {
                    "pathname": "/coding_rules",
                    "search": "?activation=true&qprofile=baz",
                  }
                }
              >
                10
              </ForwardRef(Link)>
            </td>
            <td
              className="text-right"
            >
              <Button
                onClick={[Function]}
              >
                <EditIcon
                  className="spacer-right"
                />
                project_quality_profile.change_profile
              </Button>
            </td>
          </tr>
          <tr
            key="js"
          >
            <td>
              JS
            </td>
            <td
              className="thin nowrap"
            >
              <span
                className="display-inline-flex-center"
              >
                <em>
                  project_quality_profile.instance_default
                </em>
              </span>
            </td>
            <td
              className="nowrap text-right"
            >
              <ForwardRef(Link)
                to={
                  {
                    "pathname": "/coding_rules",
                    "search": "?activation=true&qprofile=foo",
                  }
                }
              >
                10
              </ForwardRef(Link)>
            </td>
            <td
              className="text-right"
            >
              <Button
                onClick={[Function]}
              >
                <EditIcon
                  className="spacer-right"
                />
                project_quality_profile.change_profile
              </Button>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="big-spacer-top"
      >
        <h2>
          project_quality_profile.add_language.title
        </h2>
        <p
          className="spacer-top big-spacer-bottom"
        >
          project_quality_profile.add_language.description
        </p>
        <Button
          disabled={false}
          onClick={[MockFunction]}
        >
          <PlusCircleIcon
            className="little-spacer-right"
          />
          project_quality_profile.add_language.action
        </Button>
      </div>
      <SetQualityProfileModal
        availableProfiles={
          [
            {
              "activeDeprecatedRuleCount": 2,
              "activeRuleCount": 10,
              "childrenCount": 0,
              "depth": 1,
              "isBuiltIn": false,
              "isDefault": false,
              "isInherited": false,
              "key": "foo",
              "language": "js",
              "languageName": "JavaScript",
              "name": "name",
              "projectCount": 3,
            },
          ]
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        currentProfile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 10,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "foo",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 3,
          }
        }
        onClose={[MockFunction]}
        onSubmit={[MockFunction]}
        usesDefault={true}
      />
    </div>
  </div>
</div>
`;
